[Fix] count 쿼리 수정 #6